rewrite performSearch