@@ -7,6 +7,7 @@ import java.net.MalformedURLException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedList;
@@ -14,15 +15,11 @@ import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import javax.swing.JOptionPane;
-
 import net.sf.jabref.logic.help.HelpFile;
 import net.sf.jabref.logic.importer.FetcherException;
-import net.sf.jabref.logic.importer.ImportFormatPreferences;
 import net.sf.jabref.logic.importer.ParserResult;
 import net.sf.jabref.logic.importer.SearchBasedFetcher;
 import net.sf.jabref.logic.importer.fileformat.MedlineImporter;
-import net.sf.jabref.logic.l10n.Localization;
 import net.sf.jabref.model.entry.BibEntry;
 
 import org.apache.commons.logging.Log;
@@ -31,13 +28,13 @@ import org.apache.http.client.utils.URIBuilder;
 
 /**
  * Fetch or search from Pubmed http://www.ncbi.nlm.nih.gov/sites/entrez/
- *
  */
 public class MedlineFetcher implements SearchBasedFetcher {
 
     private static final Log LOGGER = LogFactory.getLog(MedlineFetcher.class);
 
-    private static String API_MEDLINE_URL = "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi";
+    private static final String API_MEDLINE_FETCH = "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi";
+    private static final String API_MEDLINE_SEARCH = "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi";
 
     private static final Pattern PART1_PATTERN = Pattern.compile(", ");
     private static final Pattern PART2_PATTERN = Pattern.compile(",");
@@ -47,16 +44,11 @@ public class MedlineFetcher implements SearchBasedFetcher {
     private static final Pattern RET_MAX_PATTERN = Pattern.compile("<RetMax>(\\d+)<\\/RetMax>");
     private static final Pattern RET_START_PATTERN = Pattern.compile("<RetStart>(\\d+)<\\/RetStart>");
 
-    private final ImportFormatPreferences importFormatPreferences;
 
     /**
      * How many entries to query in one request
      */
     private static final int PACING = 20;
-
-    public MedlineFetcher(ImportFormatPreferences importFormatPreferences) {
-        this.importFormatPreferences = importFormatPreferences;
-    }
 
     private static String toSearchTerm(String in) {
         // This can probably be simplified using simple String.replace()...
@@ -74,17 +66,16 @@ public class MedlineFetcher implements SearchBasedFetcher {
      * Gets the initial list of ids
      */
     private SearchResult getIds(String term, int start, int pacing) {
-
         boolean doCount = true;
         SearchResult result = new SearchResult();
         try {
-            URIBuilder uriBuilder = new URIBuilder(API_MEDLINE_URL);
+            URIBuilder uriBuilder = new URIBuilder(API_MEDLINE_SEARCH);
             uriBuilder.addParameter("db", "pubmed");
             uriBuilder.addParameter("retmax", Integer.toString(pacing));
             uriBuilder.addParameter("retstart", Integer.toString(start));
             uriBuilder.addParameter("term", term);
-
-            URL ncbi =  uriBuilder.build().toURL();
+            URL ncbi = uriBuilder.build().toURL();
+            // get the ids
             BufferedReader in = new BufferedReader(new InputStreamReader(ncbi.openStream()));
             String inLine;
             while ((inLine = in.readLine()) != null) {
@@ -108,8 +99,10 @@ public class MedlineFetcher implements SearchBasedFetcher {
                     doCount = false;
                 }
             }
-        } catch (IOException | URISyntaxException e) {
-            LOGGER.warn(e.getMessage(), e);
+        } catch (URISyntaxException | MalformedURLException e) { // new URL() failed
+            LOGGER.warn("Bad url", e);
+        } catch (IOException e) { // openConnection() failed
+            LOGGER.warn("Connection failed", e);
         }
         return result;
     }
@@ -124,112 +117,88 @@ public class MedlineFetcher implements SearchBasedFetcher {
         return HelpFile.FETCHER_MEDLINE;
     }
 
+    @Override
+    public List<BibEntry> performSearch(String query) throws FetcherException {
+        List<BibEntry> entryList = new LinkedList<>();
+
+        String cleanQuery = query.trim().replace(';', ',');
+
+        if (cleanQuery.matches("\\d+[,\\d+]*")) {
+            System.out.println("Fetching Medline by id...");
+
+            List<BibEntry> bibs = fetchMedline(cleanQuery);
+
+            if (bibs.isEmpty()) {
+                System.out.println("No references found");
+            }
+
+            for (BibEntry entry : bibs) {
+                entryList.add(entry);
+            }
+            return entryList;
+        }
+
+        if (!query.isEmpty()) {
+            System.out.println("Fetching Medline by term...");
+
+            String searchTerm = toSearchTerm(query);
+
+            // get the ids from entrez
+            SearchResult result = getIds(searchTerm, 0, 1);
+
+            if (result.count == 0) {
+                System.out.println("No references found");
+                return Collections.emptyList();
+            }
+
+            int numberToFetch = result.count;
+            if (numberToFetch > MedlineFetcher.PACING) {
+                numberToFetch = 20;
+            }
+
+            for (int i = 0; i < numberToFetch; i += MedlineFetcher.PACING) {
+
+                int noToFetch = Math.min(MedlineFetcher.PACING, numberToFetch - i);
+
+                // get the ids from entrez
+                result = getIds(searchTerm, i, noToFetch);
+
+                List<BibEntry> bibs = fetchMedline(result.ids);
+                for (BibEntry entry : bibs) {
+                    entryList.add(entry);
+                }
+            }
+            return entryList;
+        }
+        System.out.println("Please enter a comma separated list of Medline IDs (numbers) or search terms.");
+        System.out.println("Input error");
+        return Collections.emptyList();
+    }
 
     /**
      * Fetch and parse an medline item from eutils.ncbi.nlm.nih.gov.
      *
      * @param id One or several ids, separated by ","
-     *
      * @return Will return an empty list on error.
      */
     private static List<BibEntry> fetchMedline(String id) {
-        String baseUrl = "http://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=pubmed&retmode=xml&rettype=citation&id=" +
-                id;
         try {
-            URL url = new URL(baseUrl);
-            URLConnection data = url.openConnection();
+            URIBuilder uriBuilder = new URIBuilder(API_MEDLINE_FETCH);
+            uriBuilder.addParameter("db", "pubmed");
+            uriBuilder.addParameter("retmode", "xml");
+            uriBuilder.addParameter("rettype", "citation");
+            uriBuilder.addParameter("id", id);
+            URL fetchURL = uriBuilder.build().toURL();
+            URLConnection data = fetchURL.openConnection();
             ParserResult result = new MedlineImporter().importDatabase(
-                    new BufferedReader(new InputStreamReader(data.getInputStream())));
+                    new BufferedReader(new InputStreamReader(data.getInputStream(), StandardCharsets.UTF_8)));
             if (result.hasWarnings()) {
-                LOGGER.warn(result.getErrorMessage());
+                System.out.println(result.getErrorMessage());
             }
             return result.getDatabase().getEntries();
-        } catch (IOException e) {
+        } catch (URISyntaxException | IOException e) {
             return new ArrayList<>();
         }
-    }
-
-    @Override
-    public List<BibEntry> performSearch(String query) throws FetcherException {
-
-        List<BibEntry> entryList = new LinkedList<>();
-            String cleanQuery = query.trim().replace(';', ',');
-
-            if (cleanQuery.matches("\\d+[,\\d+]*")) {
-                //frameOP.setStatus(Localization.lang("Fetching Medline by id..."));
-
-                List<BibEntry> bibs = fetchMedline(cleanQuery);
-
-                if (bibs.isEmpty()) {
-                    //frameOP.showMessage(Localization.lang("No references found"));
-                }
-
-                for (BibEntry entry : bibs) {
-                    entryList.add(entry);
-                }
-                return entryList;
-            }
-
-            if (!query.isEmpty()) {
-                //frameOP.setStatus(Localization.lang("Fetching Medline by term..."));
-
-                String searchTerm = toSearchTerm(query);
-
-                // get the ids from entrez
-                SearchResult result = getIds(searchTerm, 0, 1);
-
-                if (result.count == 0) {
-                    //frameOP.showMessage(Localization.lang("No references found"));
-                    return Collections.emptyList();
-                }
-
-                int numberToFetch = result.count;
-                if (numberToFetch > MedlineFetcher.PACING) {
-
-                    while (true) {
-                        String strCount = JOptionPane.showInputDialog(Localization.lang("References found") +
-                                ": " + numberToFetch + "  " +
-                                Localization.lang("Number of references to fetch?"), Integer
-                                .toString(numberToFetch));
-
-                        if (strCount == null) {
-                            frameOP.setStatus(Localization.lang("%0 import canceled", "Medline"));
-                            return false;
-                        }
-
-                        try {
-                            numberToFetch = Integer.parseInt(strCount.trim());
-                            break;
-                        } catch (NumberFormatException ex) {
-                            frameOP.showMessage(Localization.lang("Please enter a valid number"));
-                        }
-                    }
-                }
-
-                for (int i = 0; i < numberToFetch; i += MedlineFetcher.PACING) {
-                    if (!shouldContinue) {
-                        break;
-                    }
-
-                    int noToFetch = Math.min(MedlineFetcher.PACING, numberToFetch - i);
-
-                    // get the ids from entrez
-                    result = getIds(searchTerm, i, noToFetch);
-
-                    List<BibEntry> bibs = fetchMedline(result.ids, frameOP);
-                    for (BibEntry entry : bibs) {
-                        iIDialog.addEntry(entry);
-                    }
-                    iIDialog.setProgress(i + noToFetch, numberToFetch);
-                }
-                return true;
-            }
-            frameOP.showMessage(
-                    Localization.lang("Please enter a comma separated list of Medline IDs (numbers) or search terms."),
-                    Localization.lang("Input error"), JOptionPane.ERROR_MESSAGE);
-            return false;
-        }
-        return null;
     }
 
     static class SearchResult {
